Added delay handling to LoginFragment

--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -10,7 +10,7 @@
         app:showAsAction="ifRoom" >
         <menu>
             <item
-                android:id="@+id/loginFragment"
+                android:id="@+id/logout"
                 android:title="@string/user_logout"
                 android:icon="@drawable/ic_baseline_logout_24"
                 app:showAsAction="never" />
