--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,6 +19,8 @@
         android:minWidth="200dp"
         android:minHeight="48dp"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
         app:layout_constraintEnd_toEndOf="@id/sign_up_button"
@@ -29,7 +31,8 @@
             android:id="@+id/login_username_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textEmailAddress">
+            android:inputType="textEmailAddress"
+            android:maxLength="20">
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -45,6 +48,8 @@
         android:minHeight="48dp"
         android:layout_marginBottom="5dp"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="50"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="@id/sign_up_button"
@@ -55,7 +60,8 @@
             android:id="@+id/login_password_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="textPassword">
+            android:inputType="textPassword"
+            android:maxLength="50">
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
