--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -31,11 +31,11 @@
                 android:src="@drawable/ic_baseline_add_photo_alternate_24"
                 app:layout_constraintBottom_toTopOf="@+id/trip_dates"
                 app:layout_constraintEnd_toEndOf="@+id/trip_name_layout"
-                app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintHeight_default="percent"
                 app:layout_constraintHeight_percent="0.5"
-                app:layout_constraintVertical_chainStyle="packed"/>
+                app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/trip_name_layout"
@@ -44,6 +44,8 @@
                 android:layout_margin="5dp"
                 android:hint="@string/trip_name"
                 app:errorEnabled="true"
+                app:counterEnabled="true"
+                app:counterMaxLength="30"
                 app:layout_constraintBaseline_toBaselineOf="@+id/trip_destination_layout"
                 app:layout_constraintEnd_toStartOf="@+id/trip_destination_layout"
                 app:layout_constraintStart_toStartOf="parent">
@@ -51,8 +53,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/trip_name"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="text" />
+                    android:layout_height="wrap_content"
+                    android:inputType="text|textCapSentences"
+                    android:maxLength="30"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -62,6 +65,8 @@
                 android:layout_margin="5dp"
                 android:hint="@string/trip_destination"
                 app:errorEnabled="true"
+                app:counterEnabled="true"
+                app:counterMaxLength="30"
                 app:layout_constraintBottom_toTopOf="@+id/trip_description_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
@@ -72,13 +77,14 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/trip_destination"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="textAutoComplete" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoComplete|textCapSentences"
+                    android:maxLength="30"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                style="@style/Widget.Material3.Button.TextButton"
                 android:id="@+id/trip_dates"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -86,15 +92,17 @@
                 app:icon="@drawable/ic_baseline_calendar_today_24"
                 app:layout_constraintBottom_toTopOf="@+id/trip_destination_layout"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/trip_images_button"/>
+                app:layout_constraintTop_toBottomOf="@+id/trip_images_button" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/trip_description_layout"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:autofillHints="none"
                 android:hint="@string/trip_description"
+                app:counterEnabled="true"
+                app:counterMaxLength="200"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -103,12 +111,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/trip_description"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="start|top"
-                    android:inputType="textAutoComplete|textMultiLine"/>
+                    android:inputType="textMultiLine|textCapSentences" />
             </com.google.android.material.textfield.TextInputLayout>
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
