--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -14,6 +14,8 @@
         android:layout_margin="5dp"
         android:hint="@string/user_name"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
         app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout">
@@ -22,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/user_name"
-            android:inputType="textPersonName"/>
+            android:inputType="textPersonName"
+            android:maxLength="20"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -32,6 +35,8 @@
         android:layout_margin="5dp"
         android:hint="@string/user_surname"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_name_layout"
         app:layout_constraintTop_toTopOf="parent">
@@ -40,7 +45,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/user_surname"
-            android:inputType="textPersonName"/>
+            android:inputType="textPersonName"
+            android:maxLength="20"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -50,6 +56,8 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_email"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_email_confirm_layout"
         app:layout_constraintStart_toStartOf="parent">
@@ -58,7 +66,8 @@
             android:id="@+id/registration_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            android:maxLength="20"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -68,6 +77,8 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_confirm_email"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_email_layout"
         app:layout_constraintTop_toBottomOf="@+id/user_name_layout">
@@ -76,7 +87,8 @@
             android:id="@+id/registration_email_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            android:maxLength="20"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -86,6 +98,8 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_password"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="50"
         app:endIconMode="password_toggle"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
@@ -95,7 +109,8 @@
             android:id="@+id/registration_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:maxLength="50"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -105,6 +120,8 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_password_confirm"
         app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="50"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
@@ -114,7 +131,8 @@
             android:id="@+id/registration_password_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:maxLength="50"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
