--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -45,7 +45,7 @@
                 android:hint="@string/trip_name"
                 app:errorEnabled="true"
                 app:counterEnabled="true"
-                app:counterMaxLength="30"
+                app:counterMaxLength="@integer/max_trip_name_text_length"
                 app:layout_constraintBaseline_toBaselineOf="@+id/trip_destination_layout"
                 app:layout_constraintEnd_toStartOf="@+id/trip_destination_layout"
                 app:layout_constraintStart_toStartOf="parent">
@@ -55,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text|textCapSentences"
-                    android:maxLength="30"/>
+                    android:maxLength="@integer/max_trip_name_text_length"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -66,7 +66,7 @@
                 android:hint="@string/trip_destination"
                 app:errorEnabled="true"
                 app:counterEnabled="true"
-                app:counterMaxLength="30"
+                app:counterMaxLength="@integer/max_destination_text_length"
                 app:layout_constraintBottom_toTopOf="@+id/trip_description_layout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
@@ -79,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textAutoComplete|textCapSentences"
-                    android:maxLength="30"/>
+                    android:maxLength="@integer/max_destination_text_length"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
@@ -102,7 +102,7 @@
                 android:autofillHints="none"
                 android:hint="@string/trip_description"
                 app:counterEnabled="true"
-                app:counterMaxLength="200"
+                app:counterMaxLength="@integer/max_description_text_length"
                 app:errorEnabled="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
