--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -15,7 +15,7 @@
         android:hint="@string/user_name"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="@integer/max_name_text_length"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
         app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout">
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/user_name"
             android:inputType="textPersonName"
-            android:maxLength="20"/>
+            android:maxLength="@integer/max_name_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -36,7 +36,7 @@
         android:hint="@string/user_surname"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="@integer/max_surname_text_length"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_name_layout"
         app:layout_constraintTop_toTopOf="parent">
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/user_surname"
             android:inputType="textPersonName"
-            android:maxLength="20"/>
+            android:maxLength="@integer/max_surname_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -57,7 +57,7 @@
         android:hint="@string/registration_email"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="@integer/max_email_text_length"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_email_confirm_layout"
         app:layout_constraintStart_toStartOf="parent">
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:maxLength="20"/>
+            android:maxLength="@integer/max_email_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -78,7 +78,7 @@
         android:hint="@string/registration_confirm_email"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="20"
+        app:counterMaxLength="@integer/max_email_text_length"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_email_layout"
         app:layout_constraintTop_toBottomOf="@+id/user_name_layout">
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:maxLength="20"/>
+            android:maxLength="@integer/max_email_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +99,7 @@
         android:hint="@string/registration_password"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="50"
+        app:counterMaxLength="@integer/max_password_text_length"
         app:endIconMode="password_toggle"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
@@ -110,7 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:maxLength="50"/>
+            android:maxLength="@integer/max_password_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -121,7 +121,7 @@
         android:hint="@string/registration_password_confirm"
         app:errorEnabled="true"
         app:counterEnabled="true"
-        app:counterMaxLength="50"
+        app:counterMaxLength="@integer/max_password_text_length"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
@@ -132,7 +132,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:maxLength="50"/>
+            android:maxLength="@integer/max_password_text_length"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
