--- a/app/src/main/res/layout/fragment_trip_content.xml
+++ b/app/src/main/res/layout/fragment_trip_content.xml
@@ -11,83 +11,99 @@
         android:id="@+id/trip_image_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/content_trip_name"
+        app:layout_constraintBottom_toTopOf="@+id/trip_content_scrollview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.4" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/content_trip_name"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:textAppearance="?attr/textAppearanceTitleLarge"
+        android:layout_height="0dp"
+        android:id="@+id/trip_content_scrollview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trip_image_pager"
-        app:layout_constraintEnd_toStartOf="@+id/content_favorite_trip"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/content_favorite_trip"
-        android:button="@drawable/sl_baseline_favorite_24"
-        android:layout_margin="16dp"
-        app:layout_constraintStart_toEndOf="@+id/content_trip_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/content_trip_name"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrolling_trip_content_layout">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/content_trip_destination"
-        android:layout_width="wrap_content"
-        android:layout_height="20sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:textAppearance="?attr/textAppearanceBodyMedium"
-        android:textColor="?android:attr/textColorSecondary"
-        android:drawablePadding="2dp"
-        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
-        app:layout_constraintTop_toBottomOf="@+id/content_trip_name"
-        app:layout_constraintStart_toStartOf="parent" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/content_trip_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:textAppearance="?attr/textAppearanceTitleLarge"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/content_favorite_trip"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/content_trip_start_date"
-        android:layout_width="wrap_content"
-        android:layout_height="20sp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:textAppearance="?attr/textAppearanceBodyMedium"
-        android:textColor="?android:attr/textColorSecondary"
-        android:drawablePadding="2dp"
-        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_trip_destination" />
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/content_favorite_trip"
+                android:button="@drawable/sl_baseline_favorite_24"
+                android:layout_margin="16dp"
+                app:layout_constraintStart_toEndOf="@+id/content_trip_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBaseline_toBaselineOf="@+id/content_trip_name"/>
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
-        android:layout_height="20sp"
-        android:id="@+id/content_trip_end_date"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:textAppearance="?attr/textAppearanceBodyMedium"
-        android:textColor="?android:attr/textColorSecondary"
-        android:drawablePadding="2dp"
-        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_trip_start_date" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/content_trip_destination"
+                android:layout_width="wrap_content"
+                android:layout_height="20sp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textColor="?android:attr/textColorSecondary"
+                android:drawablePadding="2dp"
+                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
+                app:layout_constraintTop_toBottomOf="@+id/content_trip_name"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/content_trip_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:paddingHorizontal="16dp"
-        android:textAppearance="?attr/textAppearanceBodyMedium"
-        android:textColor="?android:attr/textColorSecondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/content_trip_end_date" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/content_trip_start_date"
+                android:layout_width="wrap_content"
+                android:layout_height="20sp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textColor="?android:attr/textColorSecondary"
+                android:drawablePadding="2dp"
+                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/content_trip_destination" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="20sp"
+                android:id="@+id/content_trip_end_date"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textColor="?android:attr/textColorSecondary"
+                android:drawablePadding="2dp"
+                app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/content_trip_start_date" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/content_trip_description"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:paddingHorizontal="16dp"
+                android:textAppearance="?attr/textAppearanceBodyMedium"
+                android:textColor="?android:attr/textColorSecondary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/content_trip_end_date" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
