--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -30,10 +30,10 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_baseline_add_photo_alternate_24"
                 app:layout_constraintBottom_toTopOf="@+id/trip_dates"
-                app:layout_constraintEnd_toEndOf="@+id/trip_name_layout"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_default="percent"
                 app:layout_constraintHeight_percent="0.5"
-                app:layout_constraintStart_toEndOf="@+id/trip_name_layout"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
