--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,6 @@
     android:id="@+id/login_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     tools:context=".fragments.LoginFragment">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -14,10 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:gravity="center"
         android:hint="@string/username"
-        android:minWidth="200dp"
-        android:minHeight="48dp"
         app:errorEnabled="true"
         app:counterEnabled="true"
         app:counterMaxLength="@integer/max_email_text_length"
@@ -30,7 +26,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_username_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:maxLength="@integer/max_email_text_length">
 
@@ -42,10 +38,7 @@
         android:id="@+id/login_password_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:hint="@string/password"
-        android:minWidth="200dp"
-        android:minHeight="48dp"
         android:layout_marginBottom="5dp"
         app:errorEnabled="true"
         app:counterEnabled="true"
@@ -59,7 +52,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_password_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:maxLength="@integer/max_password_text_length">
 
