--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,11 @@
     <dimen name="trip_name_layout_width">0dp</dimen>
     <dimen name="trip_destination_layout_width">0dp</dimen>
     <dimen name="trip_description_layout_width">0dp</dimen>
+    <dimen name="user_name_layout_width">0dp</dimen>
+    <dimen name="user_surname_layout_width">0dp</dimen>
+    <dimen name="registration_email_layout_width">0dp</dimen>
+    <dimen name="registration_email_confirm_layout_width">0dp</dimen>
+    <dimen name="registration_password_layout_width">0dp</dimen>
+    <dimen name="registration_password_confirm_layout_width">0dp</dimen>
+    <dimen name="registration_button_width">0dp</dimen>
 </resources>
