--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -103,8 +103,9 @@
                 android:id="@+id/trip_description_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:autofillHints="none"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:hint="@string/trip_description"
                 app:counterEnabled="true"
                 app:counterMaxLength="@integer/max_description_text_length"
