--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -20,8 +20,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_email_layout"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintVertical_chainStyle="packed">
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout"
+        app:layout_constraintHorizontal_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -67,6 +67,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
         app:layout_constraintBottom_toTopOf="@+id/registration_password_layout"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
         app:layout_constraintHorizontal_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -113,6 +114,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/registration_button"
         app:layout_constraintTop_toBottomOf="@+id/registration_email_layout"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintHorizontal_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -153,6 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="@string/registration_button"
+        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_registration_button"
         app:layout_constraintTop_toBottomOf="@+id/registration_password_layout"
         app:layout_constraintEnd_toStartOf="@+id/cancel_registration_button"
         app:layout_constraintBottom_toBottomOf="parent"
