--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,67 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Custom palette colors -->
+    <color name="seed">#4B5A20</color>
+    <color name="md_theme_light_primary">#506601</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#D1EE81</color>
+    <color name="md_theme_light_onPrimaryContainer">#161F00</color>
+    <color name="md_theme_light_secondary">#5B6147</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#DFE6C4</color>
+    <color name="md_theme_light_onSecondaryContainer">#181E09</color>
+    <color name="md_theme_light_tertiary">#39665F</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#BCECE2</color>
+    <color name="md_theme_light_onTertiaryContainer">#00201C</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FEFCF4</color>
+    <color name="md_theme_light_onBackground">#1B1C17</color>
+    <color name="md_theme_light_surface">#FEFCF4</color>
+    <color name="md_theme_light_onSurface">#1B1C17</color>
+    <color name="md_theme_light_surfaceVariant">#E3E4D3</color>
+    <color name="md_theme_light_onSurfaceVariant">#46483C</color>
+    <color name="md_theme_light_outline">#76786B</color>
+    <color name="md_theme_light_inverseOnSurface">#F3F1E9</color>
+    <color name="md_theme_light_inverseSurface">#30312C</color>
+    <color name="md_theme_light_inversePrimary">#B6D168</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#506601</color>
+    <color name="md_theme_light_outlineVariant">#C6C8B8</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#B6D168</color>
+    <color name="md_theme_dark_onPrimary">#283500</color>
+    <color name="md_theme_dark_primaryContainer">#3B4D00</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D1EE81</color>
+    <color name="md_theme_dark_secondary">#C3CAA9</color>
+    <color name="md_theme_dark_onSecondary">#2D331C</color>
+    <color name="md_theme_dark_secondaryContainer">#434931</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DFE6C4</color>
+    <color name="md_theme_dark_tertiary">#A1D0C6</color>
+    <color name="md_theme_dark_onTertiary">#023731</color>
+    <color name="md_theme_dark_tertiaryContainer">#204E47</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BCECE2</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1B1C17</color>
+    <color name="md_theme_dark_onBackground">#E4E3DB</color>
+    <color name="md_theme_dark_surface">#1B1C17</color>
+    <color name="md_theme_dark_onSurface">#E4E3DB</color>
+    <color name="md_theme_dark_surfaceVariant">#46483C</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C6C8B8</color>
+    <color name="md_theme_dark_outline">#909284</color>
+    <color name="md_theme_dark_inverseOnSurface">#1B1C17</color>
+    <color name="md_theme_dark_inverseSurface">#E4E3DB</color>
+    <color name="md_theme_dark_inversePrimary">#506601</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#B6D168</color>
+    <color name="md_theme_dark_outlineVariant">#46483C</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
